# invoice_processor

./: .gitignore  README.md  README_setup.txt  check_10th_workday.py  iskon.py  iskon_invoice_processor.py  main.py  pyproject.toml  requirements.txt  run_on_10th_workday.sh  tomato.py  tomato_invoice_processor.py
.github/: SETUP_SECRETS.md
.github/workflows/: process-invoices.yml
